<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/segundaTela"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2C2C"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_arigato"
        android:layout_width="279dp"
        android:layout_height="114dp"
        android:text="@string/secondary_txt"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.210" />

    <Button
        android:id="@+id/btn_anterior"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/secondary_btn"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_arigato"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/txtGithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/github"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toTopOf="@+id/txtGithub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mr_robot" />

</androidx.constraintlayout.widget.ConstraintLayout>